<resources>
    <string name="app_name">Douyin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>

    <string name="record">+</string>
    <string name="upload_from_local">本地上传</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="user">User</string>
    <string name="meme1"> https://img.ifunny.co/videos/3b37158bc60eea6d11623bd16aecdb1bb3fa73500dfe1eacf5b5d71261d864a9_1.mp4</string>
    <string name="meme2">https://img.ifunny.co/videos/45d075f2ff5652c312a735e41866559324dd5381040921faddbe54dcae8b7b51_1.mp4
</string>
    <string name="meme3">https://img.ifunny.co/videos/358762ca5da69e4ea38802ff270274c957b65156fc64735bac8efe13d8c8c73d_1.mp4
</string>
    <string name="meme4"> https://img.ifunny.co/videos/fd211f251c14215f60901fb987663e9da7747e20efde7d2ead782aab11fb4f5e_1.mp4
</string>
    <string name="meme5"> https://img.ifunny.co/videos/3474808dc64ce5136b55dcf9314b043f8ed9e40d8a49277db0ebbc472611af40_1.mp4
</string>
    <string name="meme6">https://img.ifunny.co/videos/e2b43f2cbcc87b96c4e9936e21ffaa2a992ac3893c0dcafbecd5a7cddda975dd_1.mp4
</string>
    <string name="meme7">https://img.ifunny.co/videos/48a7cca41c641907375827dceb386201e2498036892876693a0d32f976f9329e_1.mp4
</string>
    <string name="meme8">https://img.ifunny.co/videos/2357e1b99e68187dc1970b7834c66a29170ae4d506fcc59c8f7d176a02c267a9_1.mp4
</string>
    <string name="at">@</string>
    <string name="usrName">用户名</string>
    <string name="vidTitle">视频标题</string>
    <string name="identifier"></string>
    <string name="BDurl">https://api-sjtu-camp-2021.bytedance.com/homework/invoke</string>
    <string name="loading">加载中...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_info">编辑资料</string>
    <string name="add_friends">+关注</string>
    <string name="user_background">User Background</string>
    <string name="head_edit">点击更换头像</string>
    <string name="user_edit">修改用户名</string>
    <string name="confirm_edit_info">确认修改</string>
    <string name="login">登录</string>
    <string name="userName">用户名</string>
    <string name="please_input_userName">请输入您的用户名</string>
    <string name="password">密码</string>
    <string name="please_input_password">请输入您的密码</string>
    <string name="register">未注册？创建账号</string>
    <string name="not_login">您还未登录</string>
    <string name="confirm">继续</string>
    <string name="cancel">再想想</string>
    <string name="suggestion">请在这一刻留下你的想法~</string>
    <string name="draft">存草稿</string>
    <string name="upload">发布一下</string>
    <string name="my_video">我的视频</string>
</resources>