<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_comment"
            android:layout_width="300dp"
            android:layout_height="198dp"
            android:textColor="@color/white"
            android:hint="@string/suggestion"
            android:textColorHint="@color/exo_gray"
            android:selectAllOnFocus="true"/>

        <ImageButton
            android:id="@+id/cover_img"
            android:layout_width="108dp"
            android:layout_height="198dp"
            android:background="@color/black"
            android:scaleType="centerInside"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/bt_draft"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/selector_button"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/draft"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical|center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bt_upload"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/selector_button"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/upload"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical|center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>



</FrameLayout>